--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -40,7 +40,7 @@
       
       <!-- Copyright -->
       <div class="text-sm">
-        © 2024 CXpoint. All Rights Reserved.
+        © 2025 CX Point. All Rights Reserved.
       </div>
     </div>
     
