--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -261,7 +261,7 @@ const serializedBasicFeatures = JSON.stringify(basicFeatures);
                 <div class="h-full flex flex-col items-center gap-12 py-8">
                     <div class="flex flex-col items-center justify-center ">
                         <p class="font-bold text-[0.8rem] text-black/50 text-center"><span class="text-[2rem] text-black">$ 4.5</span>per user / per day</p>
-                        <p class="font-semibold text-[1rem] text-black/60 text-center">Start 10 user license</p>
+                        <p class="font-semibold text-[1rem] text-black/60 text-center">Start 15 user license</p>
                     </div>
                     <button class=" py-3 px-6 bg-black text-white rounded-[2rem]">Select Plan</button>
                     <div class="w-full space-y-8">
@@ -311,10 +311,18 @@ const serializedBasicFeatures = JSON.stringify(basicFeatures);
                 <p class="font-semibold text-[1rem] text-black/60">We're here to help you every step of the way. Whether you're looking for guidance, need assistance, or want to explore your options, we're ready to support you every step of the way. If you're unsure which package is right for you or need something different, we're here to help.</p>
             </div>
             <div class="md:w-1/3 flex flex-col items-start justify-center gap-8">
-                <p class="font-bold text-[1rem] text-black flex items-center justify-end gap-2">
+                <a 
+                    href="/termsofservice" 
+                    class="font-bold text-[1rem] text-black flex items-center justify-end gap-2 hover:text-black/70 transition-all duration-300"
+                >
                     FAQ and terms <span><Icons.ArrowRight size={20}/></span>
-                </p>
-                <button class="py-3 px-6 bg-black text-white rounded-[2rem]">Contact US</button>
+                </a>
+                <a 
+                    href="/company/#form" 
+                    class="py-3 px-6 bg-black text-white rounded-[2rem] cursor-pointer hover:bg-black/80 transition-all duration-300 inline-block"
+                >
+                    Contact US
+                </a>
             </div>
         </div>
     </div>
