--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -86,7 +86,7 @@ import StatisticsGrid from "../../components/StatisticsGrid.astro";
             <div class="bottomtext flex flex-col items-center justify-center">
                 <img src={astrix} alt="astrix" class="astrix w-[20px] lg:w-[50px] mb-8 "/>
                 <p>Ready to stand out and grow ?</p>
-                <a href="/company#contact" class="mt-24 contact-button text-sm text-center py-5 px-8 bg-[#ff6d00] rounded-full w-fit font-medium hover:bg-black hover:text-white transition-all duration-300 ">Start Your Success</a>
+                <a href="/company/#form" class="mt-24 contact-button text-sm text-center py-5 px-8 bg-[#ff6d00] rounded-full w-fit font-medium hover:bg-black hover:text-white transition-all duration-300 ">Start Your Success</a>
         </div>
         <div id="custom-cursor-product"></div>
     </div>
