--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -29,12 +29,12 @@
         <!-- Column 2 -->
         <div class="space-y-4">
           <a href="/policy" class="block hover:text-gray-300">Privacy Statement</a>
-          <a href="#" class="block hover:text-gray-300">Terms Of Service</a>
+          <a href="/termsofservice" class="block hover:text-gray-300">Terms Of Service</a>
           <a href="/security" class="block hover:text-gray-300">Security Policy</a>
-          <a href="#" class="block hover:text-gray-300">Accessibility Statement</a>
+          <a href="/accessibility" class="block hover:text-gray-300">Accessibility Statement</a>
           <a href="/cookies" class="block hover:text-gray-300">Cookie Policy</a>
-          <a href="#" class="block hover:text-gray-300">Cookie Preferences</a>
-          <a href="#" class="block hover:text-gray-300">Sitemap</a>
+          <a href="/cookies" class="block hover:text-gray-300">Cookie Preferences</a>
+          <a href="/sitemap" class="block hover:text-gray-300">Sitemap</a>
         </div>
       </div>
       
