--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -89,7 +89,7 @@ import ContactForm from '../components/ContactForm.astro';
 		<HeroLastPage/>
 		<!-- <Stats /> -->
 		<CTAPage />
-		<ContactForm />
+		<!-- <ContactForm /> -->
 		<Footer/>
 		
 	</main>
