--- a/src/components/CTAPage.astro
+++ b/src/components/CTAPage.astro
@@ -10,7 +10,7 @@
             <p>Ready to see what your</p> 
             <p> future looks like with our CXPoint</p>
             <p>products for your Contact Center?</p>
-            <a href="#form" class="mt-24 contact-button text-sm text-center py-4 px-5 bg-[#ff6d00] rounded-full w-fit hover:bg-black hover:text-white transition-all duration-300" id="demo-btn">Request Demo</a>
+            <a href="/company/#form" class="mt-24 contact-button text-sm text-center py-4 px-5 bg-[#ff6d00] rounded-full w-fit hover:bg-black hover:text-white transition-all duration-300" id="demo-btn">Request Demo</a>
         </div>
         <div class="footertext">
             <p>this is your team of Contact Center experts,</p>
@@ -166,7 +166,7 @@
     // Add smooth scroll for demo button
     const demoBtn = document.getElementById('demo-btn');
     demoBtn.addEventListener('click', (e) => {
-        e.preventDefault();
+        // e.preventDefault();
         gsap.to(window, {
             duration: 1,
             scrollTo: {
@@ -177,13 +177,13 @@
         });
     });
 
-gsap.to(".page6", {
-    scrollTrigger: {
-        trigger: ".page6",
-        start: "top 10%",
-        end: "bottom -200",
-        scrub: 1
-    },
-    opacity: 1
-});
+// gsap.to(".page6", {
+//     scrollTrigger: {
+//         trigger: ".page6",
+//         start: "top 10%",
+//         end: "bottom -200",
+//         scrub: 1
+//     },
+//     opacity: 1
+// });
 </script>
