--- a/src/components/Navbar2.astro
+++ b/src/components/Navbar2.astro
@@ -12,7 +12,7 @@
                 <li class="nav-links"><a href="/resources" class="text-white hover:text-[#ff6d00] transition-all duration-300">Resources</a></li>
                 <li class="nav-links"><a href="/company" class="text-white hover:text-[#ff6d00] transition-all duration-300">Company </a></li>
             </ul>
-            <a href="/company#contact">
+            <a href="/company#form">
                 <button class="text-white text-[0.9rem] px-6 py-4 rounded-full bg-[#ff6d00] font-semibold ml-4">Get in touch</button> <!-- Get in touch button -->
             </a>
         </div>
