--- a/src/components/marquee.astro
+++ b/src/components/marquee.astro
@@ -43,7 +43,7 @@
   ---
   
   <div class="marquee-container ">
-    <p class=" font-semibold text-center">Our Clients & Business partners globally</p>
+    <p class=" font-semibold text-center text-xl">Our Clients & Business partners globally :</p>
     <div class="marquee" id="marquee">
       
       {[...Array(repetitions)].map(() => (
