--- a/src/pages/products/index.astro
+++ b/src/pages/products/index.astro
@@ -40,7 +40,7 @@ import StatisticsGrid from "../../components/StatisticsGrid.astro";
         <div>
             <div class="w-full h-full overflow-hidden flex flex-col lg:flex-row items-start justify-between gap-10 rounded-2xl pt-8 lg:pt-0 lg:py-5">
                 <div class="w-full lg:w-[40%] h-[200px] rounded-tr-3xl rounded-bl-3xl px-10 animated-text overflow-hidden">
-                    <video autoplay muted loop src="../../../public/assets/product_video.mov" class="w-full h-full object-cover scale-125"><source src="/assets/product_video.mov" type="video/mov"></video>
+                    <video autoplay muted loop src="../../../public/assets/product-video.mp4" class="w-full h-full object-cover scale-125"><source src="/assets/product-video.mp4" type="video/mov"></video>
                     <!-- <img src="/assets/Mockup-1.jpg" alt="mockup" class="w-full h-full object-cover scale-150"> -->
                 </div>
                 <div class="lg:w-[60%] h-full flex flex-col justify-center gap-4 lg:gap-0 lg:justify-between">
