--- a/src/pages/products/index.astro
+++ b/src/pages/products/index.astro
@@ -46,7 +46,7 @@ import StatisticsGrid from "../../components/StatisticsGrid.astro";
                         loop
                         playsinline
                         preload="auto" 
-                        src="/assets/09_typo-b_Products_trim.mp4" 
+                        src="/assets/09_typo-b_Products_trim.mov" 
                         class="w-full h-full object-cover scale-125">
                     </video>
                     <!-- <img src="/assets/Mockup-1.jpg" alt="mockup" class="w-full h-full object-cover scale-150"> -->
