--- a/src/pages/resources/index.astro
+++ b/src/pages/resources/index.astro
@@ -30,7 +30,7 @@ import { carouselData } from "../../data/carouselData.js";
                         loop 
                         muted 
                         playsinline
-                        src="../../../public/assets/resources_video.mov"
+                        src="/assets/resources_video.mov"
                         preload="auto"
                     >
                     </video>
