Services video trial

--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -62,7 +62,7 @@ import StatisticsGrid from "../../components/StatisticsGrid.astro";
                     loop 
                     muted 
                     playsinline
-                    src="../../../public/assets/service_video.mov"
+                    src="/assets/service_video.mov"
                     preload="auto"
                 >
                 </video>
