--- a/src/components/CTAPage.astro
+++ b/src/components/CTAPage.astro
@@ -13,7 +13,7 @@
             <a href="/company/#form" class="mt-24 contact-button text-sm text-center py-4 px-5 bg-[#ff6d00] rounded-full w-fit hover:bg-black hover:text-white transition-all duration-300" id="demo-btn">Request Demo</a>
         </div>
         <div class="footertext">
-            <p>this is your team of Contact Center experts,</p>
+            <p>We are your team of Contact Center experts,</p>
             <p>get ready to make your contact center stand out.</p>
         </div>
     </div>
@@ -105,8 +105,8 @@
 .footertext {
     display: flex;
     flex-direction: column;
-    font-family: 'MediaanItalic', sans-serif;
-    font-weight: 400;
+    /* font-family: 'MediaanItalic', sans-serif; */
+    font-weight: 600;
     font-size: 20px;
     font-stretch: 700%;
 }
