--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,11 +19,11 @@
         <!-- Column 1 -->
         <div class="space-y-4">
           <a href="/" class="block hover:text-gray-300">Home</a>
-          <a href="#" class="block hover:text-gray-300">Products</a>
-          <a href="#" class="block hover:text-gray-300">About Us</a>
-          <a href="#" class="block hover:text-gray-300">Contact Us</a>
-          <a href="#" class="block hover:text-gray-300">Locations</a>
-          <a href="#" class="block hover:text-gray-300">Resources</a>
+          <a href="/products" class="block hover:text-gray-300">Products</a>
+          <a href="/products/#pricing" class="block hover:text-gray-300">Pricing</a>
+          <a href="/company/#form" class="block hover:text-gray-300">Contact Us</a>
+          <a href="/company/#locations" class="block hover:text-gray-300">Locations</a>
+          <a href="/resources" class="block hover:text-gray-300">Resources</a>
         </div>
         
         <!-- Column 2 -->
