--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -153,7 +153,7 @@ const serializedBasicFeatures = JSON.stringify(basicFeatures);
 // const serializedProFeatures = JSON.stringify(proFeatures);
 ---
 
-<div class="w-screen h-full bg-[#E7E7D6] my-24">
+<div class="w-screen h-full bg-[#E7E7D6] my-24" id="pricing">
     <p class="text-center lg:text-start font-new w-full stretch font-bold text-[2rem] md:px-16  xl:px-24 px-6 mb-10 leading-[100%]">
         Our Standard Pricing 
     </p>
