--- a/src/components/HeroLastPage.astro
+++ b/src/components/HeroLastPage.astro
@@ -15,7 +15,7 @@
                 <h3 class="font-akira text-[#ff6d00]">01</h3>
                 <img src="/assets/Evaluate.png" alt="Evaluate" class="w-full h-48 my-2 rounded-2xl overflow-hidden object-cover " />
                 <div class="flex flex-col items-start pb-4 gap-2">
-                    <p>Request and Evaluate</p>
+                    <p class="font-semibold">Request and Evaluate</p>
                     <span class="text-gray-300">explore our range of contact center automation product features, reviews, and features to assess its value and suitability for your business needs</span>
                 </div>
             </div>
@@ -23,7 +23,7 @@
                 <h3 class="font-akira text-[#ff6d00]">02</h3>
                     <img src="/assets/Demo.png" alt="Demo" class="w-full h-48 my-2 rounded-2xl overflow-hidden object-cover " />
                 <div class="flex flex-col items-start pb-4 gap-2">
-                    <p>Request Demo</p>
+                    <p class="font-semibold">Request Demo</p>
                     <span class="text-gray-300">to experience the product firsthand and evaluate its usability and performance. Our team of experts can help and guide you to find right product which meets your business demands​</span>
                 </div>
             </div>
@@ -31,7 +31,7 @@
                 <h3 class="font-akira text-[#ff6d00]">03</h3>
                 <img src="/assets/Trial.png" alt="Trial" class="w-full h-48 my-2 rounded-2xl overflow-hidden object-cover " />
                 <div class="flex flex-col items-start pb-4 gap-2">
-                    <p>Activate Free Trial</p>
+                    <p class="font-semibold">Activate Free Trial</p>
                     <span class="text-gray-300">Get FREE access to selected product trial pack which could help you to analyze it benefits as evaluated before and gain deeper inside on product features and details to confirm its alignment with your business goals.​​</span>
                 </div>
             </div>
@@ -39,14 +39,14 @@
                 <h3 class="font-akira text-[#ff6d00]">04</h3>
                 <img src="/assets/Subscribe.png" alt="Subscribe" class="w-full h-48 my-2 rounded-2xl overflow-hidden object-cover " />
                 <div class="flex flex-col items-start pb-4 gap-2">
-                    <p>Subscribe</p>
+                    <p class="font-semibold">Subscribe</p>
                     <span class="text-gray-300">Unlock the full potential of your experience—upgrade from trial to subscription and enjoy uninterrupted access to all our premium features!​​</span>
                 </div>
             </div>
         </div>
     </div>
     <div style="height: 200vh; background: #f9f9f9;">
-        <h3>Scroll Down to See the Effect</h3>
+    <h3>Scroll Down to See the Effect</h3>
     </div>
 </div>
 
@@ -135,7 +135,7 @@
     }
   
     .horizontal-animation-item {
-        font-family: 'MediaanItalic';
+        /* font-family: 'MediaanItalic'; */
         width: 300px; /* Adjust width */
         height: 400px; /* Adjust height */
         background: #1E1E1D; /* Make background transparent */
