--- a/src/components/BrandFeatures.astro
+++ b/src/components/BrandFeatures.astro
@@ -126,7 +126,7 @@ const brandingFeatures = [
                                 <div class="flip-card-back">
                                     <div class="flip-content">
                                         <h3>Request a Demo?</h3>
-                                        <a href="/company#contact" class="demo-btn">Schedule Demo</a>
+                                        <a href="/company#form" class="demo-btn">Schedule Demo</a>
                                     </div>
                                 </div>
                             </div>
@@ -178,6 +178,13 @@ const brandingFeatures = [
         padding: 1rem 0;
         padding-left: 2rem;
         width: max-content;
+    }
+
+    @media (min-width:1700px) {
+        .features-scroll-container {
+            display: flex;
+            justify-content: center;
+        }
     }
 
     .feature-card {
