--- a/src/pages/products/index.astro
+++ b/src/pages/products/index.astro
@@ -39,7 +39,7 @@ import StatisticsGrid from "../../components/StatisticsGrid.astro";
         </div>
         <div>
             <div class="w-full h-full overflow-hidden flex flex-col lg:flex-row items-start justify-between gap-10 rounded-2xl pt-8 lg:pt-0 lg:py-5">
-                <div class="w-full lg:w-[40%] h-[200px] rounded-tr-3xl rounded-bl-3xl px-10 animated-text overflow-hidden">
+                <div class="w-full lg:w-[40%] h-[200px] 3xl:h-[350px] rounded-tr-3xl rounded-bl-3xl px-10 animated-text overflow-hidden">
                     <video 
                         autoplay 
                         muted 
@@ -51,13 +51,13 @@ import StatisticsGrid from "../../components/StatisticsGrid.astro";
                     </video>
                     <!-- <img src="/assets/Mockup-1.jpg" alt="mockup" class="w-full h-full object-cover scale-150"> -->
                 </div>
-                <div class="lg:w-[60%] h-full flex flex-col justify-center gap-4 lg:gap-0 lg:justify-between">
+                <div class="lg:w-[60%] h-full flex flex-col justify-center gap-4 lg:gap-0 lg:justify-start 3xl:gap-10">
                     <div class="w-full h-fulloverflow-hidden ">
-                        <p class="median text-center lg:text-right text-[17px] animated-text text-black">
+                        <p class="median text-center lg:text-right text-[17px] 3xl:text-[20px] animated-text text-black">
                             Unlock the power of AI-based automation and revolutionize your customer interactions. Our cutting-edge solutions empower agents with intuitive interfaces, freeing up time for more meaningful connections and reducing manual workload. Gain valuable insights and make data-driven decisions with our advanced analytics capabilities. Plus, our seamless integration and customization options make it easy to implement our solutions with your existing systems. With CXPoint, you can optimize every touchpoint and drive growth by delivering exceptional customer experiences.
                         </p>
                     </div>
-                    <div class="w-full h-fit lg:h-full flex items-end justify-center lg:justify-end">
+                    <div class="w-full h-fit lg:h-fit flex items-end justify-center lg:justify-end">
 
                         <a href="/services" class=" text-[20px] median animated-text flex items-end px-4 py-2 border-2 border-black rounded-full">Learn More</a>
                         
