--- a/src/pages/services/[slug].astro
+++ b/src/pages/services/[slug].astro
@@ -1075,7 +1075,7 @@ const { industry } = Astro.props;
             <div class="mt-6 pt-6 border-t border-gray-200">
               <p class="text-gray-600">
                 For more information, visit 
-                <a href="https://cxpoint.co.uk" class="text-blue-600 hover:text-blue-800 font-medium">
+                <a href="https://www.cxpoint.co.uk" class="text-blue-600 hover:text-blue-800 font-medium">
                   cxpoint.co.uk
                 </a>
               </p>
