--- a/src/components/Navbar2.astro
+++ b/src/components/Navbar2.astro
@@ -1,5 +1,5 @@
 <nav class="navbar absolute md:top-[4%] left-1/2 transform -translate-x-1/2 w-[93%] bg-transparent z-50">
-    <div class="container mx-auto flex justify-between items-center p-4">
+    <div class="max-sm:container max-sm:mx-auto flex justify-between items-center p-4">
         <div class="text-xl font-bold text-white mix-blend-difference">
             <a href="/">
                 <img src="/assets/LogoBlack.png" alt="logo" class="w-[50px] md:w-[100px] h-auto">
